@@ -13,13 +13,29 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
+apply from: "$rootDir/gradle/providedConfiguration.gradle"
+
 dependencies {
     groovy libraries.groovy
 
-    compile project(':core')
-    compile project(':plugins')
+    compile project(":core")
+    compile project(":plugins")
+
+    // keep in sync with ScalaBasePlugin code
+    provided("com.typesafe.zinc:zinc:0.2.0-M3")
 
     testCompile libraries.slf4j_api
 }
 
 useTestFixtures(project: ":plugins") // includes core test fixtures
+
+if (!javaVersion.java6Compatible) {
+    sourceSets.all {
+        groovy.exclude '**/jdk6/**'
+    }
+}
+
+configure([integTest, daemonIntegTest]) {
+    jvmArgs "-XX:MaxPermSize=1g" // AntInProcessScalaCompilerIntegrationTest needs lots of permgen
+}
